...
                <IconButton
                  accessibilityLabel="Log out"
                  icon="exit"
                  color={tintColor}
                  size={24}
                  onPress={() => disconnecting()}
                  testID="home.header.logout"
                />
              </>
            )
          })} />
        <Stack.Screen
          name='SettingsScreen'
...
                accessibilityLabel="Go back"
                icon="arrow-back"
                color={"white"}
                size={24}
                style={{ marginRight: 20 }}
                onPress={() => navigation.goBack()}
                testID="guess-path.header.back" />)
          })} />
        <Stack.Screen
          name="GuessFeedScreen"
          component={GuessFeedScreen}
          options={({ navigation }) => ({
            presentation: "modal",
...
                accessibilityLabel="Go back"
                icon="arrow-back"
                color={"white"}
                size={24}
                style={{ marginRight: 20 }}
                onPress={() => navigation.goBack()}
                testID="guess-feed.button.back" />)
          })} />
        <Stack.Screen
          name="GuessScreen"
          component={GuessScreen}
          options={{
            presentation: "modal",
...
