...
    handleRankingData();
  }, [handleRankingData])

  return (
    <PrivateGroupThemeProvider group={group}>
      {rankingDatum ? (
        <View style={styles.screen} testID="ranking.screen">
          <TableComponent data={rankingDatum} onPress={showSpecificDatum} onEndReached={handleEndReached} />
        </View>
      ) : (
        <LoadingOverlay message={t('ranking.loadingTable')}/>
      )}
    </PrivateGroupThemeProvider>
...
