...
            <Ionicons name={"arrow-up-circle"} color={"white"} size={screenWidth/10}/>
            <Ionicons name={"arrow-down-circle"} color={"white"} size={screenWidth/10}/>
            <Text style={[styles.filterText, textSize]}>Description</Text>
          </View>

          <View style={styles.marginTop}>
            <BigButton accessibilityLabel="Start guessing" testID="guess-path.button.start" text="Let's go!" onPress={handleFilterClick} buttonStyle="ranking" />
          </View>


          <View style={styles.filterIconContainer}>
            <Ionicons name={"arrow-back-circle"} color={"white"} size={screenWidth/10}/>
            <Text style={[styles.filterText, textSize]}>Pass</Text>
...
